# organic-ai

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  WORKLOG.md  package-lock.json  package.json  train_brain.sh  train_smart.sh  tsconfig.json
crates/core/: Cargo.toml
crates/core/src/: cell.rs  direction.rs  genome.rs  lib.rs  organism.rs
crates/engine/: Cargo.toml
crates/engine/src/: council.rs  energy.rs  lib.rs  neural_tick.rs  persistence.rs  reproduction.rs  session.rs  simulation.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: archive.rs  behavior.rs  lib.rs
crates/growth/: Cargo.toml
crates/growth/src/: interpreter.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  node.rs  protocol.rs  sync.rs
crates/neuron/: Cargo.toml
crates/neuron/src/: algorithm.rs  arithmetic.rs  attention.rs  brain.rs  cortex.rs  curiosity.rs  hdc.rs  inner_life.rs  language.rs  lib.rs  lif.rs  lsm.rs  memory.rs  neural_math.rs  predictive.rs  ring.rs  spike.rs  stdp.rs  thinking.rs  working_memory.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  snapshot.rs  trading_api.rs  user_input.rs  websocket.rs
crates/substrate/: Cargo.toml
crates/substrate/src/: grid.rs  lib.rs  sal.rs  tile.rs
crates/tools/: Cargo.toml
crates/tools/src/: external.rs  handler.rs  lib.rs  logic.rs  memory.rs  pattern.rs  safety.rs
crates/trading/: Cargo.toml
crates/trading/src/: backtest.rs  baseline.rs  health.rs  lib.rs  news_composer.rs  position.rs  seed.rs  self_assessment.rs
docs/superpowers/plans/: 2026-04-24-m1-its-alive.md  2026-04-24-m2-it-learns.md
docs/superpowers/specs/: 2026-04-24-organic-ai-design.md
tests/integration/: simulation_test.rs
training_data/: capitals.txt  coding.txt  conversation.txt  grammar.txt  history.txt  logic_advanced.txt  math_basic.txt  poetry.txt  problem_solving.txt  reasoning.txt  science.txt  vocabulary.txt
web/: index.html
web/src/: main.ts  renderer.ts  types.ts
