[package]
name = "organic-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
organic-core = { path = "../core" }
organic-substrate = { path = "../substrate" }
organic-growth = { path = "../growth" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
