[package]
name = "organic-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
organic-core = { path = "../core" }
organic-substrate = { path = "../substrate" }
organic-growth = { path = "../growth" }
organic-neuron = { path = "../neuron" }
organic-evolution = { path = "../evolution" }
organic-tools = { path = "../tools" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
serde_json = "1"

[[test]]
name = "integration"
path = "../../tests/integration/simulation_test.rs"
