[package]
name = "organic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
organic-core = { path = "../core" }
organic-substrate = { path = "../substrate" }
organic-engine = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
organic-tools = { path = "../tools" }
organic-neuron = { path = "../neuron" }
organic-network = { path = "../network" }
